add feature that allows to insert particle at an exact location.
git-svn-id: http://dminfo:8686/svn/repository/models/branches/ptm_development@2679 cdc4813b-4270-ec4f-936e-925f93a782c2